@@ -127,6 +127,7 @@
 	* Updated schema.xml name
 	* Added a separate clear cache menu to initialize Solr connections instead of hooking into configuration cache clearing
 	* Task #28758: Move example TypoScript configuration into a separate static template
+	* Added feature #33711: Option to remove empty values in SOLR_MULTIVALUE
 
 2012-02-13  Ingo Renner  <ingo.renner@dkd.de>
 
